# adsfcr

./: README.md  boot.html  test.html  test_1.html
REPAYMENT_PLAN/: index.html
bgrd/: db_00_bgrd.xlsx  utils.R  utils.py
calibration/: drs_calibration.csv
concentration_risk/: db.csv
effective_interest_rate/: eir.html
ldp/: BCR_TABLES.xlsx  bcr.R  bcr.py  ldp_adj_af_adjustment_multi_year_opt.R  ldp_adj_af_adjustment_multi_year_opt.py  ldp_adj_af_multi_year.R  ldp_adj_af_multi_year.py  ldp_benchmarking.csv  ldp_dp.csv  pt.R  pt.py  utils_benchmarking_ldp.R  utils_benchmarking_ldp.py
lgd/: macro_data_lgd.csv
model_dev_and_vld/: bcr.R  bcr.py  bin_vld.csv  c2st_test.csv  c2st_train.csv  db_cat_rf_bin.csv  db_cont_target_woe_equivalent.csv  db_pi.csv  db_poc.csv  db_rr.csv  db_smi.csv  db_tb_interactions.csv  db_tps.csv  db_welch_t_vs_mw_test.csv  db_woe_reg_intercept.csv  db_woe_rf_importance.csv  hl_vs_zscore.html  lgd_sim.csv  pca.csv  pd_sim.csv
model_dev_and_vld/smi_py/: LICENSE.txt  MANIFEST.in  pyproject.toml
model_dev_and_vld/smi_py/smi/: _init_.py  constr_ols.py  utils.py
model_dev_and_vld/smi_py/src/smi/: __init__.py  _init_.py  constr_ols.py  smi.py  utils.py
mrm/: LEICode_LGD_ModelID_EndOfObservationPeriod_versionNumber.xlsx  db_calib_mbc.csv  db_dp.csv  db_train_mbc.csv  lgd_ead_dp_somersd_and_binning.csv  lgd_ead_somersd_and_conservatism.csv  lgd_ead_somersd_cont_model.csv  (+8 more)
mrm/ms_py/: pyproject.toml
mrm/ms_py/ModelShift/: MANIFEST.in
mrm/ms_py/src/ModelShift/: __init__.py  checks.py  methods.py  ms.py  utils.py  woe.py
mrm/ms_py/src/ModelShift.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+50 files in other folders)
