[build-system]
requires      = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ModelShift"
version = "0.0.1"
description = "Model Shift and Model Risk Management"
readme = "README.md"
authors = [{ name = "Andrija Djurovic", email = "djandrija@gmail.com" }, 
           { name = "Alan Forrest", email = "alan.forrest@hotmail.co.uk" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = ["numpy", "pandas", "statsmodels", "patsy"]
requires-python = ">=3.0"

[project.optional-dependencies]
build = ["build", "twine"]

[project.urls]
repository = "https://github.com/andrija-djurovic/adsfcr"
